tests/semantic/invalid/type_mismatch/test1.src
// Invalid: type mismatch in assignment
fn main() -> int {
    int x = true;
    return x;
}
